# Practica_NLP

./: pyproject.toml
notebooks/: NLP-trabajo-final.ipynb  Practica_Limpieza_Texto.ipynb  archivo.parquet
