[project]
name = "template-data-science-container"
version = "0.1.0"
description = "Template for data science and AI Projects with the last stable version of python and devcontainer"
authors = [
    "Jose R. Zapata <joserzapata.github.io>",
]
requires-python = ">=3.12"
readme = "README.md"

dependencies = [
    "jupyter>=1.1.1",
    "numpy>=2.0.0",
    "pandas>=2.1.1",
    "pyarrow>=21.0.0",
    "fastparquet>=2024.11.0",
    "scikit-learn>=1.7.2",
    "watermark>=2.5.0",
    "nltk>=3.9.2",
    "spacy>=3.8.7",
    "es-core-news-sm",
]

[project.urls]
documentation = "https://.github.io/template-data-science-container"
repository = "https://github.com//template-data-science-container"


[dependency-groups]
dev = [
    "pre-commit>=4.2.0", # Code linting and formatting
    "pytest>=8.3.5", # Testing framework
    "pytest-cookies>=0.7.0",
    "pytest-cov>=6.1.1",
    "cruft[pyproject]>=2.15.0",# Automated Cookiecutter template synchronization
]

#

[tool.uv]
package = false
default-groups = [
    "dev",
#
]

[tool.uv.sources]
es-core-news-sm = { url = "https://github.com/explosion/spacy-models/releases/download/es_core_news_sm-3.8.0/es_core_news_sm-3.8.0-py3-none-any.whl" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.paths]
source = ["src/"]

[tool.coverage.run]
source = ["src"]
omit = ["**/__init__.py"]
